# cpp-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data_structures/: avltree.cpp
mathematics/: collatz.cpp  fibonacci.cpp  goldbach.cpp
sorting/: counting-sort.cpp  insertion-sort.cpp
